Bug 257661 - Fix unused function warning added in 264004@main
Summary: Fix unused function warning added in 264004@main
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-06-02 14:17 PDT by Jasmine
Modified: 2023-06-02 17:05 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jasmine 2023-06-02 14:17:28 PDT
...
Comment 1 Jasmine 2023-06-02 14:22:58 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14639
Comment 2 EWS 2023-06-02 17:04:29 PDT
Committed 264841@main (36ecb3448f46): <https://commits.webkit.org/264841@main>

Reviewed commits have been landed. Closing PR #14639 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-06-02 17:05:17 PDT
<rdar://problem/110191686>