Fix unused function warning added in 264004@main https://bugs.webkit.org/show_bug.cgi?id=257661

Reviewed by Don Olmstead.

* Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.cpp:
(WebKit::isSmallLayerBacking):

Canonical link: https://commits.webkit.org/264841@main